# aoc_2024

./: .gitignore  pyproject.toml
solutions/day0/: main.py  part2.py  utils.py
solutions/day1/: main.py  part1.py  part2.py  utils.py
solutions/day10/: main.py  pt1.py  solutions.py
solutions/day2/: main.py  part1.py  part2.py  utils.py
solutions/day2_v2/: solutions.py
solutions/day3/: solutions.py
solutions/day4/: solutions.py
solutions/day5/: solutions.py
solutions/day6/: solutions.py
solutions/day7/: solutions.py
solutions/day8/: solutions.py
tests/: test_day0.py  test_day1.py  test_day2.py  test_day2_v2.py  test_day3.py  test_day4.py
