[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = "Poetry for AdventOfCode 2024"
authors = ["Dag-Are Trydal <dagaretrydal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pytest = "^8.3.3"
scipy = "^1.14.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
